DB 연동 테스트 ( 화면 좌측 메뉴트리 가져오기)
DB 연동 테스트 ( 화면 좌측 메뉴트리 가져오기)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 #데이터 베이스 세팅
-spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://192.168.1.171:5432/pmodf
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+# spring.datasource.driver-class-name=org.postgresql.Driver
+#####spring.datasource.url=jdbc:postgresql://192.168.1.171:5432/pmodf
+# spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:postgresql://localhost:5433/postgres?charSet=UTF-8&prepareThreshold=1
 spring.datasource.username=postgres
 spring.datasource.password=1234
+
+
+#마이바티스 세팅
+mybatis.type-aliases-package=com.csj.mestest.dao
+mybatis.mapper-locations=mapper/**/*.xml
+
+#thymeleaf 세팅
+spring.thymeleaf.cache=false
 
 #서버 세팅
 server.port=8090
